[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/components/ui/boost_menu/weapon_shot/UIWeaponShot.gd" type="Script" id=1]
[ext_resource path="res://fonts/intro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/components/ui/boost_menu/textures/minus.png" type="Texture" id=3]
[ext_resource path="res://scenes/components/ui/boost_menu/textures/plus.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 11
extra_spacing_top = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 18
extra_spacing_bottom = 2
font_data = ExtResource( 2 )

[node name="UIWeaponShot" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Title" type="Label" parent="."]
modulate = Color( 0.937255, 0.32549, 0.313726, 1 )
margin_left = 128.0
margin_right = 378.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
custom_fonts/font = SubResource( 2 )
text = "Дальность пули"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Hint" type="Label" parent="."]
modulate = Color( 0.937255, 0.32549, 0.313726, 1 )
margin_left = 128.0
margin_top = 16.0
margin_right = 344.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
custom_fonts/font = SubResource( 9 )
text = "Так же влияет на скорость пули"
__meta__ = {
"_edit_lock_": true
}

[node name="MultiplierSign" type="Label" parent="."]
modulate = Color( 0.937255, 0.32549, 0.313726, 1 )
margin_left = 88.0
margin_top = 2.0
margin_right = 97.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
custom_fonts/font = SubResource( 5 )
text = "x"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Value" type="Label" parent="."]
modulate = Color( 0.937255, 0.32549, 0.313726, 1 )
margin_left = 96.0
margin_top = 2.0
margin_right = 120.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
custom_fonts/font = SubResource( 8 )
text = "0"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Minus" type="Button" parent="."]
margin_right = 32.0
margin_bottom = 26.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
icon_align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Plus" type="Button" parent="."]
margin_left = 40.0
margin_right = 72.0
margin_bottom = 26.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
icon_align = 1
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Minus" to="." method="_on_Minus_pressed"]
[connection signal="pressed" from="Plus" to="." method="_on_Plus_pressed"]
